Actions
Bug #12996
closedbhyve kernel should be wscheck clean
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
bhyve
Gerrit CR:
Description
When bhyve was imported into illumos, broad portions of it were added to the exception lists including the one for wscheck. Since the kernel side of bhyve is less focused on keeping deltas from upstream in ifdef guards, it should be fine to clean up whitespace nits and remove the exceptions.
Related issues
Updated by Patrick Mooney almost 2 years ago
- Related to Bug #13049: cstyle should tolerate freebsd headers added
Updated by Patrick Mooney almost 2 years ago
Since this is a whitespace-only change, I tested it with wsdiff
. The only changes I saw, besides the normal DOF and version string noise, were assertion line number differences, because empty lines had been removed. (This indicating that the resulting binary was functionally identical.)
Updated by Electric Monk almost 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 0 to 100
git commit 84971882a96ac0fecd538b02208054a872ff8af3
commit 84971882a96ac0fecd538b02208054a872ff8af3 Author: Patrick Mooney <pmooney@pfmooney.com> Date: 2020-08-21T05:03:26.000Z 12996 bhyve kernel should be wscheck clean Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Robert Mustacchi <rm@fingolfin.org>
Actions