usr/src/uts/i86pc/io/vmm/amd/npt.h
@@ -31,7 +31,7 @@
 #ifndef _SVM_NPT_H_
 #define _SVM_NPT_H_
 
-int 	svm_npt_init(int ipinum);
+int	svm_npt_init(int ipinum);
 struct	vmspace *svm_npt_alloc(vm_offset_t min, vm_offset_t max);
 void	svm_npt_free(struct vmspace *vmspace);
 
